--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 		</section>
 
 		<div class="last-text">
-			<p>© Developed 2023 by Ilya Korobeynikov</p>
+			<p>© Developed 2023 by Lilian Carvalho</p>
 		</div>
 
 	<a href="#home" class="scroll-top">
